# SoulGain

./: README.md
soulgain/: Cargo.toml  brain_test.json  plasticity.json  skills.json  text.txt
soulgain/src/: evolution.rs  hypothesis.rs  intuition.rs  lib.rs  logic.rs  main.rs  memory.rs  plasticity.rs  run.rs  vm.rs
soulgain/src/types/: mod.rs
