[package]
name = "soulgain"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
# We use inkwell 0.5.0 because it specifically supports LLVM 18
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
se = "0.1.0"
serde_json = "1.0.149"
